# DefconExpanded

./: !gametracker.bat  .clang-format  .clang-tidy  .env  .gitattributes  .gitignore  .gitmodules  10player server 5v5.bat  10player server diplo.bat  10playerdiplo.txt  16 player server.bat  16playerconfig.txt  1v1 server.bat  1v1 serverafas.bat  1v1 serverbest.bat  1v1 serverbest2.bat  1v1 servercursed.bat  1v1 serverdefault.bat  1v1 servereusa.bat  1v1 serverraizer.bat  1v1 servertest.bat  1v1config.txt  1v1configafas.txt  1v1configbest.txt  1v1configbest2.txt  1v1configcursed.txt  1v1configdefault.txt  1v1configeusa.txt  1v1configraizer.txt  1v1configtest.txt  1v1hawhahw.bat  1v1muricon.bat  1v1muricon.txt  1v1muriconrandom.bat  1v1muriconrandom.txt  1v1variable.bat  2v2 server.bat  2v2 servernoRUorAS.bat  2v2config.txt  2v2confignoRUorAS.txt  (+118 more)
contrib/systemIV/: .gitignore  CMakeLists.txt  systemiv.cpp  systemiv.h
contrib/systemIV/contrib/binreloc/: binreloc.c  binreloc.h
contrib/systemIV/contrib/emsdk/: .gitignore  README.md  emscripten-releases-tags.json  emsdk.ps1  emsdk.py  emsdk_manifest.json
contrib/systemIV/contrib/highway-1.3.0/: CMakeLists.txt  LICENSE-BSD3
contrib/systemIV/contrib/imgui-1.92.5/: CMakeLists.txt
contrib/systemIV/contrib/tinygltf-2.9.7/: CMakeLists.txt
contrib/systemIV/contrib/unrar/: CMakeLists.txt  Unrar-vs2015.sln  Unrar.sln  Unrar.vcproj  Unrar.vcxproj  arccmt.cpp  archive.cpp  consio.cpp  file.h  headers.h  isnt.cpp  log.cpp  os.h  os.hpp  rar.cpp  rarbloat.h  raros.h  rarvm.cpp  suballoc.h  unpack.cpp  unrar.cpp  unrar.h
contrib/systemIV/interface/: styleeditor_window.cpp
contrib/systemIV/interface/components/: checkbox.cpp  core.cpp  core.h  drop_down_menu.cpp  filedialog.cpp  inputfield.cpp  message_dialog.cpp  scrollbar.cpp  scrollbar.h
contrib/systemIV/interface/options/: screenoptions_window.cpp  screenoptions_window.h  soundoptions_window.cpp  soundoptions_window.h
contrib/systemIV/interface/soundsystem/: soundeditor_window.cpp  soundparameter_window.cpp  soundstats_window.cpp
contrib/systemIV/lib/: debug_utils.cpp  debug_utils.h  debug_utils_linux.cpp  debug_utils_wasm.cpp  hi_res_time.cpp  language_table.cpp  language_table.h  memory_leak.cpp  multiline_text.cpp  preferences.cpp  preferences.h  profiler.cpp  profiler.h  spawn.cpp  string_utils.cpp  string_utils.h  thread_affinity.h
contrib/systemIV/lib/debug/: debug_console.cpp  debug_utils.cpp  debug_utils.h  debug_utils_linux.cpp  debug_utils_wasm.cpp  imgui.cpp  imgui.h  memory_leak.cpp  profiler.cpp
contrib/systemIV/lib/eclipse/: eclbutton.cpp  eclbutton.h  eclipse.cpp  eclipse.h  eclwindow.cpp  eclwindow.h
contrib/systemIV/lib/filesys/: binary_stream_readers.cpp  binary_stream_readers.h  file_system.cpp  file_system.h  filesys_utils.cpp  filesys_utils.h  native_dialog.cpp  native_dialog.h  text_file_writer.cpp  text_file_writer.h  text_stream_readers.cpp  text_stream_readers.h
contrib/systemIV/lib/gucci/: crashpad.cpp  crashpad.h  input.cpp  input.h  input_sdl.cpp  input_sdl_linux.cpp  input_win32.cpp  macosxlibrary.cpp  macosxlibrary.h  spawn.cpp  win32library.cpp  win32library.h  window_manager.cpp  window_manager.h  window_manager_d3d11.cpp  window_manager_d3d11.h  window_manager_opengl.cpp  window_manager_opengl.h  window_manager_sdl.cpp  window_manager_sdl.h  window_manager_win32.cpp  window_manager_win32.h
contrib/systemIV/lib/imgui/: debug_console.cpp  debug_console.h  frame_debugger.cpp  frame_debugger.h  imgui.cpp  imgui.h  preferences_editor.cpp  preferences_editor.h
contrib/systemIV/lib/math/: fixed.h  fixed64_asin_table.inc  fixed64_sin_table.inc  fixed_64.cpp  fixed_64.h  fixed_float.cpp  fixed_float.h  fixed_generate_asin.cpp  fixed_generate_sin.cpp  fixed_test.cpp  float_asin_table.inc  float_sin_table.inc  hash.cpp  hash_data.cpp  invert_matrix.cpp  math_utils.cpp  math_utils.h  matrix33.cpp  matrix33.h  matrix34.cpp  matrix34.h  matrix4f.cpp  matrix4f.h  random_number.cpp  random_number.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h
contrib/systemIV/lib/metaserver/: authentication.cpp  authentication.h  matchmaker.cpp  matchmaker.h  metaserver.cpp  metaserver.h
contrib/systemIV/lib/netlib/: condition.h  condition_osxlinux.cpp  condition_wasm.cpp  condition_win32.cpp  condition_winxp.cpp  condition_winxp.h  net_lib.cpp  net_lib.h  net_lib_linux.h  net_lib_wasm.cpp  net_lib_wasm.h  net_lib_win32.h  net_mutex.h  net_mutex_linux.cpp  net_mutex_wasm.cpp  net_mutex_win32.cpp  net_socket.cpp  net_socket_listener.cpp  net_socket_listener.h  net_socket_listener_wasm.cpp  net_socket_session.cpp  net_socket_session.h  net_socket_session_wasm.cpp  net_socket_wasm.cpp  net_thread_linux.cpp  net_thread_wasm.cpp  net_thread_win32.cpp  net_udp_packet.cpp  net_udp_packet.h  net_udp_packet_wasm.cpp  thread_controller.cpp  thread_controller.h
contrib/systemIV/lib/render/: check_gl_errors.h  colour.cpp  colour.h  renderer.cpp  renderer.h  renderer3d.cpp  renderer3d.h  renderer_3d.cpp  renderer_3d.h  renderer_buffers.cpp  renderer_d3d11.cpp  renderer_d3d11.h  renderer_debug_menu.cpp  renderer_debug_menu.h  renderer_opengl.cpp  renderer_opengl.h  renderer_overlay.cpp  renderer_overlay.h  renderer_vbo.cpp  sprite_atlas.h  styletable.cpp  styletable.h
contrib/systemIV/lib/render2d/: operations.cpp  operations_2d.cpp  primitives.cpp  primitives_2d.cpp  renderer.cpp  renderer.h  renderer_2d.cpp  renderer_2d.h  renderer_2d_d3d11.cpp  renderer_2d_d3d11.h  renderer_2d_directx11.cpp  renderer_2d_directx11.h  renderer_2d_opengl.cpp  renderer_2d_opengl.h  renderer_buffers.cpp  renderer_vbo.cpp  sprites.cpp  sprites_2d.cpp  text.cpp  text_2d.cpp
contrib/systemIV/lib/render3d/: operations_3d.cpp  primitives_3d.cpp  renderer_3d.cpp  renderer_3d.h  renderer_3d_buffers.cpp  renderer_3d_d3d11.cpp  renderer_3d_d3d11.h  renderer_3d_directx11.cpp  renderer_3d_directx11.h  renderer_3d_nuke.cpp  renderer_3d_opengl.h  (+6 more)
contrib/systemIV/tools/: copyfiles.pl  listfiles.pl
website/dedconrcon/: CMakeLists.txt  RCONClient.cpp  RCONClient.h  RCONServer.h  RealEncryption.cpp
(+4722 files in other folders)
